# MaskGeneration

./: CMakeLists.txt  Header.h  Source.cpp
CoFusionReader/: CoFusionReader.cpp  CoFusionReader.h
DatasetReader/: DatasetReader.cpp  DatasetReader.h
DimensionConvertor/: DimensionConvertor.cu  DimensionConvertor.h
GeometricSegmentation/: GeometricSegmentation.cpp  GeometricSegmentation.cu  GeometricSegmentation.h
JointBilateralFilter/: JointBilateralFilter.cpp  JointBilateralFilter.cu  JointBilateralFilter.h
NYUv2Reader/: NYUv2Reader.cpp  NYUv2Reader.h
NormalMapGenerator/: NormalMapGenerator.cpp  NormalMapGenerator.cu  NormalMapGenerator.h
ObjectDetector/: ObjectDetector.cpp  ObjectDetector.h
RGBDSceneReader/: RGBDSceneReader.cpp  RGBDSceneReader.h
Utils/: Utils.cpp  Utils.h  cuda_header.h  photogeoedge.py
mainEngine/: mainEngine.cpp  mainEngine.h
photometricSegmentation/: photometricSegmentation.cpp  photometricSegmentation.h
